# EnvU

./: .gitignore  README.md  main.py  output_paths.txt  pyproject.toml  write_main.py
config/: 24h2本地端口修复.md  250422还是有点耗电.xml  Open with Code.reg  Open with NeeView.reg  Open with Neeview.reg  Open with PotPlayer.reg  owithu.toml  scoop.toml  scoop.txt
dotfile/: Taskfile.yml
scoop/: install.py
src/linku/: __main__.py  config.py  linku.toml  manager.py  symlink_ops.py
src/owithu/: __init__.py  __main__.py  manager.py  owithu.toml
src/reinstallp/: __main__.py  config.toml
src/scoolp/: CHANGELOG.md  CLEAN_VERSION_GUIDE.md  CONFIG_GUIDE.md  QUICKSTART.md  README.md  __init__.py  __main__.py  clean.py  clean_config.toml  clean_config_example.toml  config.toml  config_example.toml  init.py  install.py  interactive.py  scoop.toml  sync.py  test_scoolp.py
src/scoolp/book/: CLEAN_VERSION_GUIDE.md  SCOOLP_MIGRATION.md  SCOOLP_QUICKREF.md  SCOOLP_REFACTOR.md  SCOOLP_SUMMARY.md
utils/: file_migrator.py  registry_generator.py  reinstall_editable_packages.py  requirements.txt  scoop_sync.py  setup_python_dirs.py  symlink_manager.py  symlink_redirector.py  test_python_env.py  winget2scoop.py
