[project]
name = "envu"
version = "0.1.0"
description = "Environment utilities including winget to scoop migration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich",
    "typer",
]

[project.scripts]
linku = "linku.__main__:main"
owithu = "owithu.__main__:main"
scoolp = "scoolp.__main__:main"