[project]
name = "envu"
version = "0.1.0"
description = "Environment utilities including winget to scoop migration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich",
    "typer",
    "send2trash",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
linku = "linku.__main__:main"
owithu = "owithu.__main__:main"
scoolp = "scoolp.__main__:cli"